# servier

./: .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  Makefile  README.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-test.txt  requirements.txt
app/config/: config.py
app/error/: custom_error.py
app/schema/: schema.py
app/utils/: utils.py
docs/: app.html  search.js  utils.html
docs/app/: config.html  error.html  schema.html  utils.html
docs/app/config/: config.html
docs/app/error/: custom_error.html
docs/app/schema/: schema.html
docs/app/utils/: utils.html
docs/utils/: config.html  custom_error.html  utils.html
tests/: conftest.py
tests/test_integration/: test_integration_utils.py
tests/test_integration/folder_test/: trash_data.json
tests/test_unit/: test_utils.py
