[tool.poetry]
name = "app"
version = "0.1.0"
description = "app drug for servier"
authors = ["jojo <jonatha.ndamba.pro@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^2.5.2"
loguru = "^0.7.2"
charset-normalizer = "^3.3.2"
joblib = "^1.3.2"
google-cloud-storage = "^2.13.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.5.0"
pylint = "^3.0.2"
pdoc = "^14.1.0"
black = "^23.11.0"
loguru = "^0.7.2"


[tool.poetry.group.test.dependencies]
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
